src_old/objects/Material__c.object
<CustomObject>
    <description>Material defines a physical item that will be shipped to a Location to by a Fulfillment Center. Material is related to Fulfillment Center and Job Material.</description>
    <fields>
        <fullName>BoxSize__c</fullName>
        <label>Box Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EstimatedCostPerUnit__c</fullName>
        <formula>FulfillmentBundling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost Per Unit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentBundling__c</fullName>
        <label>Fulfillment &amp; Bundling(Kit/ALaCarte) ($)</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FulfillmentCenterName__c</fullName>
        <formula>FulfillmentCenter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fulfillment Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentCenter__c</fullName>
        <label>Fulfillment Center</label>
        <referenceTo>FulfillmentCenter__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receiving ID and Custom Description are editable, when adding Materials to Project Service, if this is checked.</description>
        <inlineHelpText>Receiving ID and Custom Description are editable, when adding Materials to Project Service, if this is checked.</inlineHelpText>
        <label>Editable Custom Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <label>One Hub Retailer ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer__c</referenceTo>
        <relationshipLabel>Materials</relationshipLabel>
        <relationshipName>Materials</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight (lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FulfillmentCenter__c</columns>
        <columns>EstimatedCostPerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>